--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,6 +30,7 @@ subjects:
 - !lcsh 'Phrenology -- Periodicals'
 - !lcsh 'Medicine -- Periodicals'
 - !lcc 'BF'
+- GITenberg
 title: 'Buchanan''s Journal of Man, September 1887
 
   Volume 1, Number 8'
